--- a/public/ggekos.yml
+++ b/public/ggekos.yml
@@ -4,6 +4,7 @@ person:
     email: contact@ggekos.com
     title: Lead developer, full-stack, devops.
     interest: Music, Magic The Gathering
+    url: ggekos.com
 social:
     facebook: https://www.facebook.com/alexandre.colella
     twitter: https://twitter.com/ggekos
