--- a/composer.json
+++ b/composer.json
@@ -2,37 +2,35 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2",
         "ext-iconv": "*",
         "knplabs/knp-markdown-bundle": "^1.7",
         "sensio/framework-extra-bundle": "^5.1",
-        "symfony/asset": "^4.1",
-        "symfony/console": "^4.1",
-        "symfony/expression-language": "^4.1",
-        "symfony/finder": "^4.1",
+        "symfony/asset": "^5.1",
+        "symfony/console": "^5.1",
+        "symfony/expression-language": "^5.1",
+        "symfony/finder": "^5.1",
         "symfony/flex": "^1.0",
-        "symfony/form": "^4.1",
-        "symfony/framework-bundle": "^4.1",
-        "symfony/lts": "^4@dev",
+        "symfony/form": "^5.1",
+        "symfony/framework-bundle": "^5.1",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/process": "^4.1",
-        "symfony/security-bundle": "^4.1",
+        "symfony/process": "^5.1",
+        "symfony/security-bundle": "^5.1",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
-        "symfony/twig-bundle": "^4.1",
-        "symfony/validator": "^4.1",
-        "symfony/web-link": "^4.1",
+        "symfony/twig-bundle": "^5.1",
+        "symfony/validator": "^5.1",
+        "symfony/web-link": "^5.1",
         "symfony/webpack-encore-pack": "*",
-        "symfony/yaml": "^4.1"
+        "symfony/yaml": "^5.1"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
-        "symfony/dotenv": "^4.1",
+        "symfony/dotenv": "^5.1",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
-        "symfony/test-pack": "^1.0",
-        "symfony/web-server-bundle": "^4.1"
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
