--- a/public/ggekos_fr.yml
+++ b/public/ggekos_fr.yml
@@ -100,3 +100,8 @@ experience:
             Lisbon Challenge
             StartUp Chile
 
+hi: Bonjour
+skills: Compétences
+experiences: Expériences
+phone: Téléphone
+public_key: Clé public
