--- a/public/ggekos_en.yml
+++ b/public/ggekos_en.yml
@@ -30,24 +30,24 @@ experience:
         start: Depuis Février 2020
         end:
         info: |+
-            Logiciel basé sur l'IA pour l'automation et l'amélioration des diagnostiques en histologie.
+            IA based software to aid breast cancer diagnostics.
             Cloud Azure. Azure fonctions, message bus.
             DevOps/MLOps :
                 Ansible, Jenkins, Rundeck, Docker
-            Applications front :
+            Frontend :
                 Angular
-            Applications back :
+            Backend :
                 ExpressJs
             Machine Learning :
                 TensorFlow/Keras
             
-            Réalisations : 
-                Management de l'équipe application.
-                Mise en place de la philosphie DevOps ainsi que le Software craftsmanship.
-                Dockerisation de toutes les applications, support pour la dockerisation machine learning.
-                Création des CI/CD.
-                Tooling pour le machine learning.
-                Optimisation des temps de calcul avec le passage sur du serverless.
+            Works : 
+                Software team management.
+                Create and deploy a devops mindset.
+                Dockerize software and machile learning.
+                CI/CD.
+                Machine learning tooling.
+                Migrate to serverless.
     gererseul:
         title: CTO
         name: Gérer Seul / LeBonBail
@@ -59,44 +59,47 @@ experience:
             Devops : Ansible
 
             Réalisations :
-            Mise en place de deploiement automatisé
-            Cache doctrine
-            Sessions sous redis
-            Pont entre les deux stacks
-            Ajout de features
+            CI/CD
+            Doctrine cache
+            Redis for session
+            Link between two stacks
+            Features implementation
             Monitoring
-            Mise en place méthode agile
-            Adaption du logiciel pour mise en place en marque blanche
+            Agile implementation
+            White label
     quable:
         title: Lead Developer
         name: Quable
         start: Juillet 2016
         end: Juin 2018
         info: |+
-            Plateforme PIM en Saas.
-            Réferent technique.
-            Mise en place de nouvelles features (activités, historique, stockage blob, authentification Oauth).
-            Devops : scripts jenkins et docker. Mise en place de playbooks et de rôles ansible (provisionnement, installation, tâches de mises à jour).
-            Industrialisation de l’infrastructure (passage du modèle single tenant sur OVH à un modèle multi tenant sur Azure et AWS).
-            Création d’un moteur de template pour export pdf print.
+            Saas PIM.
+            Technical leader.
+            Features : Activity, historic, blob storage, Oauth authentication.
+            Devops : jenkins and docker scripts. Ansible playbooks.
+            Deploy solution on azure cloud.
     eldapps:
         title: Full-stack Developer
         name: Eldapps
         start: Juin 2014
         end: Juin 2016
         info: |+
-            Agence web.
-            Réalisation et amélioration de projet sous Symfony ( spotwod.com , parisautrement.com ) 
-            Connecteur Sage sous CodeIgniter 
-            Plugin pour Wordpress ( paysanbreton.fr , unepieceenplus.com ) 
-            Réalisation application mobile IOS en Xamarin.forms. ( flexig.com )
+            Web agency.
+            Multiple projets on symfony and code igniter.
+            Wordpress plugins.
+            Mobile application on IOS with Xamarin.forms 
     revstr:
         title: Founder, CTO
         name: Revstr
         start: Janvier 2013
         end: Avril 2014
         info: |+
-            Plateforme de financement participatif.
+            Crowdfunding platform.
             Lisbon Challenge
             StartUp Chile
 
+hi: Hi
+skills: Skills
+experiences: Experiences
+phone: Phone
+public_key: Public key
