--- a/public/ggekos_fr.yml
+++ b/public/ggekos_fr.yml
@@ -23,6 +23,10 @@ side_projects:
         title: Lipock
         url: https://lipock.com
 
+    machicoulis:
+        title: Machicoulis
+        url: https://machicoulis.eu
+
 experience:
     primaalab:
         title: Team Leader application
